--- a/about.html
+++ b/about.html
@@ -88,6 +88,11 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 
 </section>
 
+<section>
+  <div class="return-button">
+    <a href="#">トップへ戻る</a>
+    </div>
+</section>
 
 </main>
 
