--- a/name.html
+++ b/name.html
@@ -182,6 +182,7 @@
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/food.html">Food menu<span>フードメニュー</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/name.html">Name plate<span>なまえプレート</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/access.html">Access<span>アクセス</span></a></li>
+<li><a href="https://a-chaaa.github.io/rinakoteikoku/question.html">Question<span>よくある質問</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/detail.html">Detail<span>詳細</span></a></li>
 </ul>
 </nav>
