--- a/detail.html
+++ b/detail.html
@@ -43,12 +43,16 @@
   
 <h2>Daily schedule<span>一日のスケジュール</span></h2>
     
-  
-<div style="text-align: center">  
+<div class="list2">
 <figure class="up">
 <img src="https://a-chaaa.github.io/rinakoteikoku/スケジュール.png" alt="スケジュール">
+<figcaption>スケジュール</figcaption>
 </figure>
+<div class="text">
+プロジェクションマッピングは、交互で違う映像が流れます
 </div>
+</div>  
+
 
 </section>
 
