--- a/name.html
+++ b/name.html
@@ -59,7 +59,9 @@
 </figure>
 <div class="text">
 お好きなプレートとパーツを選んで<br>
-自分だけの名前プレートを作れます
+自分だけの名前プレートを作れます<br>
+パーツはアルファベットやリボン、ハート、数字など<br>
+さまざまなパーツをご用意しております
  
 </div>
 </div>
