--- a/name.html
+++ b/name.html
@@ -43,7 +43,7 @@
  
 <div class="list2">
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/ネームプレート.png" alt="トレカケース">
+<img src="https://a-chaaa.github.io/rinakoteikoku/ネームプレート.png" alt="ネームプレート">
 </figure>
 <div class="text">
 <h3>基本情報</h3>
