--- a/food.html
+++ b/food.html
@@ -129,7 +129,7 @@
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ピンク.png" alt="和菓子名"><span>770円</span></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ピンク.png" alt="和菓子名"><span>770円</span></figure>
 <h4>二人が祈る星空</h4>
 <p>「さあ、一緒に祈りましょう」「ええ」<br>
 そうして二人は星空に祈りました。
