--- a/question.html
+++ b/question.html
@@ -27,7 +27,7 @@
 
 <section>
 
-<h2>Ditail<span>詳細</span></h2>
+<h2>Q and A<span>よくある質問</span></h2>
   
 <div style="text-align: center">  
 <figure class="up">
@@ -36,22 +36,7 @@
 </div>
 
   
-<h2>Event map<span>イベントマップ</span></h2>
-  
-画像入れる
 
-  
-<h2>Daily schedule<span>一日のスケジュール</span></h2>
-    
-<div class="list2">
-<figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/スケジュール.png" alt="スケジュール">
-<figcaption>スケジュール</figcaption>
-</figure>
-<div class="text">
-プロジェクションマッピングは、交互で違う映像が流れます
-</div>
-</div>  
 
 
 </section>
