--- a/about.html
+++ b/about.html
@@ -41,6 +41,7 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
  <section> 
 <h2>News<span>最新情報</span></h2>
 
+<center>
 <dl>
 <dt>2022/2/14</dt>
   <dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">トレカケースの詳細を更新しました！</a></dd>
@@ -51,6 +52,7 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 <dt>2022/1/14</dt>
 <dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">ﾘﾅｺ帝国、活動開始！</a></dd>
 </dl>
+</center>
 </section>
 
 <section>
