--- a/about.html
+++ b/about.html
@@ -55,6 +55,37 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 </center>
 </section>
 
+  <section>
+
+<h2>Ditail<span>詳細</span></h2>
+  
+<div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/シグナルとシグナレス (1).png" alt="詳細">
+</figure>
+</div>
+
+  
+<h2>Event map<span>イベントマップ</span></h2>
+  
+画像入れる
+
+  
+<h2>Daily schedule<span>一日のスケジュール</span></h2>
+    
+<div class="list2">
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/スケジュール.png" alt="スケジュール">
+<figcaption>スケジュール</figcaption>
+</figure>
+<div class="text">
+プロジェクションマッピングは、交互で違う映像が流れます
+</div>
+</div>  
+
+
+</section>
+  
 <section>
 
 <h2>Photo's<span>イベントの写真</span></h2>
