--- a/food.html
+++ b/food.html
@@ -138,14 +138,14 @@
 </div>
 
  
-<div class="list up">
+<!--<div class="list up">
  
 <br> 
 <br> 
 
 </div>
 <br> 
-<br> 
+<br> -->
 
 </section>
 
