--- a/access.html
+++ b/access.html
@@ -48,6 +48,12 @@
 
 </section>
 
+    <section>
+  <div class="return-button">
+    <a href="https://a-chaaa.github.io/rinakoteikoku/about.html">トップへ戻る</a>
+    </div>
+</section>
+    
 </main>
 
 <footer>
