--- a/detail.html
+++ b/detail.html
@@ -94,7 +94,12 @@
 
 </section>
 
-
+<section>
+  <div class="return-button">
+    <a href="https://a-chaaa.github.io/rinakoteikoku/about.html">トップへ戻る</a>
+    </div>
+</section>
+  
 </main>
 
 <footer>
