--- a/index2.html
+++ b/index2.html
@@ -122,7 +122,11 @@
 
 </section>
 
-
+<section>
+  <div class="return-button">
+    <a href="https://a-chaaa.github.io/rinakoteikoku/about.html">トップへ戻る</a>
+    </div>
+</section>
 
 </main>
 
