--- a/name.html
+++ b/name.html
@@ -136,6 +136,11 @@
 
 </section>
 
+ <section>
+  <div class="return-button">
+    <a href="https://a-chaaa.github.io/rinakoteikoku/about.html">トップへ戻る</a>
+    </div>
+</section>
 
 </main>
 
