--- a/food.html
+++ b/food.html
@@ -107,7 +107,7 @@
  
 
  
-<div class="list up">
+<div class="list up crs">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/青.png" alt="和菓子名"><span>770円</span></figure>
 <h4>二人を照らす月の光</h4>
 <p>電信柱やその仲間たちに二人の恋を<br>
@@ -117,7 +117,7 @@
 表現しています。</p>
 </div>
 
-<div class="list up">
+<div class="list up crs">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/赤.png" alt="和菓子名"><span>770円</span></figure>
 <h4>シグナルの燃える心</h4>
 <p>シグナルの胸は燃えるばかり。<br>
@@ -128,7 +128,7 @@
 そんなシグナルの燃える心を表しています。</p>
 </div>
 
-<div class="list up">
+<div class="list up crs">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/ピンク.png" alt="和菓子名"><span>770円</span></figure>
 <h4>二人が祈る星空</h4>
 <p>「さあ、一緒に祈りましょう」「ええ」<br>
