--- a/about.html
+++ b/about.html
@@ -35,7 +35,9 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 
 <section>
 <h2>PV<span>プロモーションビデオ</span></h2>
-作ったPV載せたい！！
+ <center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_1VKuWto0FI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
 </section>
   
  <section> 
