--- a/index2.html
+++ b/index2.html
@@ -38,6 +38,9 @@
  
  <br>
 <h2>Synopsis<span>あらすじ</span></h2>
+  <center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_1VKuWto0FI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
  <h4>信号機のシグナルとシグナレスの、身分違いの淡くて切ないラブストーリー<br>決して動くことができない信号機の彼らにできることは、ただ相手を想い、言葉を交わすことだけ————。</h4>
  <br>
   <br>
