--- a/name.html
+++ b/name.html
@@ -73,7 +73,7 @@
 
 <div style="text-align: center">  
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/料金.png" alt="料金表">
+<img src="https://a-chaaa.github.io/rinakoteikoku/ryoukin.png" alt="料金表">
 </figure>
 </div> 
 
