--- a/food.html
+++ b/food.html
@@ -187,6 +187,15 @@
 <!--/.pickup-->
 
 </section>
+ 
+ <section>
+  <h2>グッズも見てみる？</h2>
+    <a href="https://a-chaaa.github.io/rinakoteikoku/index.html">
+     <img src="https://a-chaaa.github.io/rinakoteikoku/1_jpg">
+   </a>
+    </div>
+  
+ </section>
 
  <section>
   <div class="return-button">
