--- a/food.html
+++ b/food.html
@@ -151,11 +151,24 @@
 
 <br> 
 <br> 
+ 
+ <section>
+  <div class="list2 button">
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/index.html" >
+</figure>
+<div class="text">
+グッズもみてみる？
+</div>
+</div>  
+ </section>
+ 
 <section>
 <br>
 <br>
 <br>
 <h2>Photo's<span>イベント写真</span></h2>
+
 
 <div class="pickup">
 
@@ -188,14 +201,7 @@
 
 </section>
  
- <section>
-  <h2>グッズも見てみる？</h2>
-    <a href="https://a-chaaa.github.io/rinakoteikoku/index.html">
-     <img src="https://a-chaaa.github.io/rinakoteikoku/1_jpg">
-   </a>
-    </div>
-  
- </section>
+ 
 
  <section>
   <div class="return-button">
