--- a/food.html
+++ b/food.html
@@ -105,7 +105,7 @@
 </div>
  <h2> <span>シグナルとシグナレスの物語に沿って作られたクリームソーダです。</span></h2>
  
-
+<div class="crs1">
  
 <div class="list up crs">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/青.png" alt="和菓子名"><span>770円</span></figure>
@@ -136,7 +136,7 @@
 <br>二人が願いを込めてお祈りした星空を<br>
 表現しています。</p>
 </div>
-
+ </div>
  
 <!--<div class="list up">
  
