--- a/food.html
+++ b/food.html
@@ -155,7 +155,9 @@
  <section>
   <div class="list2 button">
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/index.html" >
+ <a href="https://a-chaaa.github.io/rinakoteikoku/index.html">
+<img src="https://a-chaaa.github.io/rinakoteikoku/1.jpg" >
+ </a>
 </figure>
 <div class="text">
 グッズもみてみる？
