--- a/food.html
+++ b/food.html
@@ -159,7 +159,7 @@
 <img src="https://a-chaaa.github.io/rinakoteikoku/1.jpg" >
  </a>
 </figure>
-<div class="text">
+<div class="text"><br>
 グッズもみてみる？
 </div>
 </div>  
