--- a/food.html
+++ b/food.html
@@ -159,8 +159,8 @@
 <img src="https://a-chaaa.github.io/rinakoteikoku/1.jpg" >
  </a>
 </figure>
-<div class="text"><br>
-グッズもみてみる？
+<div class="text">
+グッズも<br>みてみる？
 </div>
 </div>  
  </section>
