--- a/index2.html
+++ b/index2.html
@@ -89,7 +89,19 @@
 
 </section>
 
-
+<section>
+  <div class="list2 button">
+<figure class="up">
+ <a href="https://a-chaaa.github.io/rinakoteikoku/index.html">
+<img src="https://a-chaaa.github.io/rinakoteikoku/1.jpg" >
+ </a>
+</figure>
+<div class="text">
+グッズも<br>みてみる？
+</div>
+</div>  
+ </section>
+ 
 <section>
 
 <h2>Photo's<span>イベント写真</span></h2>
