--- a/index.html
+++ b/index.html
@@ -104,6 +104,19 @@
 
 
 </section>
+ 
+ <section>
+  <div class="list2 button">
+<figure class="up">
+ <a href="https://a-chaaa.github.io/rinakoteikoku/index2.html">
+<img src="https://a-chaaa.github.io/rinakoteikoku/1.jpg" >
+ </a>
+</figure>
+<div class="text">
+グッズも<br>みてみる？
+</div>
+</div>  
+ </section>
 
 <section>
 
