--- a/food.html
+++ b/food.html
@@ -43,7 +43,7 @@
 <br> 
  
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ケーキいちご.png" alt="和菓子名"></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ケーキいちご.png" alt="和菓子名"></figure>
 <h4>いちご</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
