--- a/food.html
+++ b/food.html
@@ -43,52 +43,52 @@
 <br> 
  
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ケーキいちご.png" alt="和菓子名"></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/いちご.png" alt="和菓子名"></figure>
 <h4>いちご</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ピーチ.png" alt="和菓子名"></figure>
+<h4>ピーチ</h4>
+<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+</div>
+
+<div class="list up">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/オレンジ.png" alt="和菓子名"></figure>
 <h4>オレンジ</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"></figure>
-<h4>ブルーベリー</h4>
-<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
-</div>
-
-<div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"></figure>
-<h4>抹茶</h4>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/バナナ.png" alt="和菓子名"></figure>
+<h4>バナナ</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <br> 
  
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"></figure>
-<h4>バナナ</h4>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/グレープ.png" alt="和菓子名"></figure>
+<h4>グレープ</h4>
 <p>あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"></figure>
-<h4>ピーチ</h4>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ブルーベリー.png" alt="和菓子名"></figure>
+<h4>ブルーベリー</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ホワイト.png" alt="和菓子名"></figure>
 <h4>ホワイト</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"></figure>
-<h4>ブルー</h4>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/キウイ.png" alt="和菓子名"></figure>
+<h4>キウイ</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
