--- a/food.html
+++ b/food.html
@@ -159,9 +159,7 @@
 <img src="https://a-chaaa.github.io/rinakoteikoku/1.jpg" >
  </a>
 </figure>
-<div class="text">
-グッズも<br>みてみる？
-</div>
+<figcaption>グッズも見てみる？</figcaption>
 </div>  
  </section>
  
