--- a/food.html
+++ b/food.html
@@ -49,19 +49,19 @@
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ピーチ.png" alt="和菓子名"></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/peach.png" alt="和菓子名"></figure>
 <h4>ピーチ</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/オレンジ.png" alt="和菓子名"></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/orange.png" alt="和菓子名"></figure>
 <h4>オレンジ</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/バナナ.png" alt="和菓子名"></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/banana.png" alt="和菓子名"></figure>
 <h4>バナナ</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
@@ -69,13 +69,13 @@
 <br> 
  
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/グレープ.png" alt="和菓子名"></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/grape.png" alt="和菓子名"></figure>
 <h4>グレープ</h4>
 <p>あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/ブルーベリー.png" alt="和菓子名"></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/blue.png" alt="和菓子名"></figure>
 <h4>ブルーベリー</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
