--- a/food.html
+++ b/food.html
@@ -30,6 +30,12 @@
 <h2>Food menu<span>フードメニュー</span></h2>
  
  <h2>Chocorate cake<span>チョコレートケーキ</span></h2>
+ 
+ <div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/ケーキたち.png" alt="スイーツ">
+</figure>
+</div>
 
  
 <div style="text-align: center">  
