--- a/food.html
+++ b/food.html
@@ -156,13 +156,13 @@
  <h2>その他のフード</h2>
  
  <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/kurayami.png" alt="和菓子名"></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/kurayami.jpg" alt="和菓子名"></figure>
 <h4>シグナルの<br>くらやみネエロパスタ</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/omuomu.png" alt="和菓子名"></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/omuomu.jpg" alt="和菓子名"></figure>
 <h4>慈愛にみちたサンタマリヤの<br>お月様オムライス</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
