--- a/food.html
+++ b/food.html
@@ -152,18 +152,16 @@
 </div>
 <br> 
 <br> -->
- <section>
-  <div class="list2 button">
-<figure class="up">
- <a href="https://a-chaaa.github.io/rinakoteikoku/index.html">
-<img src="https://a-chaaa.github.io/rinakoteikoku/1.jpg" >
- </a>
-</figure>
-<figcaption>グッズも見てみる？</figcaption>
-</div>  
- </section>
+
  
- <h2>その他のフード</h2>
+ <h2>Others</h2>
+ <span>その他のフード</span>
+ <div class="list up">
+ 
+<br> 
+<br> 
+
+</div>
  
  <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/kurayami.jpg" alt="和菓子名"></figure>
@@ -175,7 +173,17 @@
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/omuomu.jpg" alt="和菓子名"></figure>
 <h4>慈愛にみちたサンタマリヤの<br>お月様オムライス</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
-</div>
+ 
+ <section>
+  <div class="list2 button">
+<figure class="up">
+ <a href="https://a-chaaa.github.io/rinakoteikoku/index.html">
+<img src="https://a-chaaa.github.io/rinakoteikoku/1.jpg" >
+ </a>
+</figure>
+<figcaption>グッズも見てみる？</figcaption>
+</div>  
+ </section>
 
 </section>
 
