--- a/food.html
+++ b/food.html
@@ -144,24 +144,24 @@
 </div>
  </div>
  
-<!--<div class="list up">
- 
-<br> 
-<br> 
-
+<div class="list up crs">
+<figure><img src= alt=><span></span></figure>
+<h4></h4>
+<p></p>
 </div>
-<br> 
-<br> -->
+ </div>
 
  
  <h2>Others</h2>
  <span>その他のフード</span>
- <div class="list up">
  
-<br> 
-<br> 
-
+ <div class="list up crs">
+<figure><img src= alt=><span></span></figure>
+<h4></h4>
+<p></p>
 </div>
+ </div>
+
  
  <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/kurayami.jpg" alt="和菓子名"></figure>
