--- a/about.html
+++ b/about.html
@@ -24,8 +24,25 @@
 <div id="container">
 
 <main>
+ 
+ 
+ 
+<section>
+<h2>PV<span>プロモーションビデオ</span></h2>
+ <center>
+<iframe width="300" height="300"  src="https://www.youtube.com/embed/_1VKuWto0FI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
+</section>
 
 <section>
+ 
+<h2>Event<span>シグナルとシグナレスのイベントを開催します！</span></h2>
+  
+<div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/シグナルとシグナレス (1).png" alt="詳細">
+</figure>
+</div>
 
 <h2>Top<span>トップ</span></h2>
 FBで無名の学生のとこに行かないだろみたいなの書かれてたけどそれを逆手に取って的なことかけたらいいんじゃないかな！！
@@ -34,7 +51,7 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 </section>
 
 <section>
-<h2>PV<span>プロモーションビデオ</span></h2>
+<h2>Synopisis movie<span>あらすじムービー</span></h2>
  <center>
 <iframe width="300" height="300"  src="https://www.youtube.com/embed/_1VKuWto0FI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </center>
@@ -59,13 +76,7 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 
   <section>
 
-<h2>Ditail<span>詳細</span></h2>
-  
-<div style="text-align: center">  
-<figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/シグナルとシグナレス (1).png" alt="詳細">
-</figure>
-</div>
+
 
   
 <h2>Event map<span>イベントマップ</span></h2>
