--- a/food.html
+++ b/food.html
@@ -161,13 +161,13 @@
 
  
  <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/kurayami.jpg" alt="和菓子名"></figure>
+  <figure><img src="https://a-chaaa.github.io/rinakoteikoku/kurayami.jpg" alt="和菓子名"><span>990円</span></figure>
 <h4>シグナルの<br>くらやみネエロパスタ</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/omuomu.jpg" alt="和菓子名"></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/omuomu.jpg" alt="和菓子名"><span>1090円</span></figure>
 <h4>慈愛にみちたサンタマリヤの<br>お月様オムライス</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
  </div>
