--- a/food.html
+++ b/food.html
@@ -150,8 +150,7 @@
  </div>
 
  
- <h2>Others</h2>
- <h2><span>その他のフード</span></h2>
+ <h2>Others<span>その他のフード</span></h2>
  
  <div class="list up crs">
 <br>
