--- a/torekanew.html
+++ b/torekanew.html
@@ -15,7 +15,7 @@
 <div id="mainimg"></div>
 
 <!--スクロールを促すアイコン-->
-<div class="scroll"><img src="https://a-chaaa.github.io/rinakoteikoku/arrow1.gif" alt=""></div>
+<div class="scroll"><img src="https://a-chaaa.github.io/rinakoteikoku/touka.png" alt=""></div>
 
 <header>
 <h1 id="logo"><a href="https://a-chaaa.github.io/rinakoteikoku/index.html"><img src="https://a-chaaa.github.io/rinakoteikoku/logo.png" alt="Sample Cafe"></a></h1>
