--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
 <div class="scroll"><img src="https://a-chaaa.github.io/rinakoteikoku/arrow1.gif" alt=""></div>
 
 <header>
-<h1 id="logo"><a href="https://a-chaaa.github.io/rinakoteikoku/index.html"><img src="https://a-chaaa.github.io/rinakoteikoku/logo.png" alt="Sample Cafe"></a></h1>
+<h1 id="logo"><a href="https://a-chaaa.github.io/rinakoteikoku/index.html"><img src="https://a-chaaa.github.io/rinakoteikoku/touka.png" alt="Sample Cafe"></a></h1>
 </header>
  
  <main>
