--- a/name.html
+++ b/name.html
@@ -72,6 +72,12 @@
  <br>
  <br>
 
+ <div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/名前の実寸.png" alt="実寸">
+</figure>
+</div>
+ 
 <div style="text-align: center">  
 <figure class="up">
 <img src="https://a-chaaa.github.io/rinakoteikoku/ryoukin.png" alt="料金表">
