--- a/about.html
+++ b/about.html
@@ -118,15 +118,19 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 </div>
 
 <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample4.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/24.png" alt=""></figure>
 </div>
 
 <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample5.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/47.png" alt=""></figure>
 </div>
 
 <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/48.png" alt=""></figure>
+</div>
+ 
+ <div class="list3">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/49.png" alt=""></figure>
 </div>
 
 </div>
