--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
  
  <div class="list2">
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/sample3.jpg" alt="名前入り切符">
+<img src="https://a-chaaa.github.io/rinakoteikoku/名前入りチケット.jpg" alt="名前入り切符">
 <figcaption>名前入りきっぷ</figcaption>
 </figure>
 <div class="text">
