--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
  
 <div class="list2">
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/sample1.jpg" alt="トレカケース">
+<img src="https://a-chaaa.github.io/rinakoteikoku/torekaaa.png" alt="トレカケース">
 <figcaption>トレカケース</figcaption>
 </figure>
 <div class="text">
