--- a/access.html
+++ b/access.html
@@ -13,7 +13,7 @@
 <div id="container">
 
 <header>
-<h1 id="logo"><a href="https://a-chaaa.github.io/rinakoteikoku/index.html"><img src="https://a-chaaa.github.io/rinakoteikoku/logo.png" alt="Sample Cafe"></a></h1>
+<h1 id="logo"><a href="https://a-chaaa.github.io/rinakoteikoku/index.html"><img src="https://a-chaaa.github.io/rinakoteikoku/touka.png" alt="Sample Cafe"></a></h1>
 </header>
 
 <main>
