--- a/food.html
+++ b/food.html
@@ -148,9 +148,24 @@
  <br>
  <br>
  </div>
-
  
  <h2>Others<span>その他のフード</span></h2>
+ 
+ <div class="list2">
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/焼きカレー.png" alt="トレカケース">
+<figcaption>焼きカレー</figcaption>
+</figure>
+<div class="text">
+<h4>1600円（税込1760円）</h4>
+あつあつとろとろの焼きカレー<br>
+恋する心とリンクして、さらに美味しく味わえます！
+</div>
+</div>
+
+ 
+<br>
+ <br>
  
  <div class="list up crs">
 <br>
