--- a/food.html
+++ b/food.html
@@ -157,6 +157,7 @@
 <figcaption>焼きカレー</figcaption>
 </figure>
 <div class="text">
+<h3>二人のHOTな恋カレー</h3>
 <h4>890円（税込）</h4>
 あつあつとろとろの焼きカレー<br>
 恋する心とリンクして、さらに美味しく味わえます！
