--- a/food.html
+++ b/food.html
@@ -51,25 +51,25 @@
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/いちご.png" alt="和菓子名"></figure>
 <h4>いちご</h4>
-<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<p>とってもキュートないちごとさくらんぼ！真っ赤な色は推しへの愛みたい！推しを思い浮かべながら食べてみてはいかが？</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/peach.png" alt="和菓子名"></figure>
 <h4>ピーチ</h4>
-<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<p>ピンクで溢れたとってもかわいい一品！</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/orange.png" alt="和菓子名"></figure>
 <h4>オレンジ</h4>
-<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<p>オレンジはまるではじける推しへの気持ち！推しへの気持ちのようにちょっぴり甘酸っぱい！そんな一品です！</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/banana.png" alt="和菓子名"></figure>
 <h4>バナナ</h4>
-<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<p>黄色って見ているだけで心が踊っちゃう！きっとわくわくした気持ちでいただけます！</p>
 </div>
 
 <br> 
@@ -77,25 +77,25 @@
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/grape.png" alt="和菓子名"></figure>
 <h4>グレープ</h4>
-<p>あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。</p>
+<p></p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/blue.png" alt="和菓子名"></figure>
 <h4>ブルーベリー</h4>
-<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<p>ブルーベリーがまるで宝石のようにキラキラ輝いてる！夢がつまった一品です！</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/ホワイト.png" alt="和菓子名"></figure>
 <h4>ホワイト</h4>
-<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<p>高級感あふれるホワイト！見た目もお味もちょっぴり大人っぽい！</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/キウイ.png" alt="和菓子名"></figure>
 <h4>キウイ</h4>
-<p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<p>綺麗なグリーンのキウイ！推しに会うためにおめかししてるみたい！</p>
 </div>
 
  
