--- a/food.html
+++ b/food.html
@@ -51,19 +51,19 @@
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/いちご.png" alt="和菓子名"></figure>
 <h4>いちご</h4>
-<p>とってもキュートないちごとさくらんぼ！真っ赤な色は推しへの愛みたい！推しを思い浮かべながら食べてみてはいかが？</p>
+<p>とってもキュートないちごとさくらんぼ！真っ赤な色は推しへの愛みたい！</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/peach.png" alt="和菓子名"></figure>
 <h4>ピーチ</h4>
-<p>ピンクで溢れたとってもかわいい一品！</p>
+<p>ピンクで溢れたとってもかわいい一品！推しを思い浮かべながら食べてみてはいかが？</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/orange.png" alt="和菓子名"></figure>
 <h4>オレンジ</h4>
-<p>オレンジはまるではじける推しへの気持ち！推しへの気持ちのようにちょっぴり甘酸っぱい！そんな一品です！</p>
+<p>オレンジははじける推しへの気持ちみたい！推しへの気持ちのようにちょっぴり甘酸っぱいお味！</p>
 </div>
 
 <div class="list up">
@@ -77,13 +77,13 @@
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/grape.png" alt="和菓子名"></figure>
 <h4>グレープ</h4>
-<p></p>
+<p>グレープってとっても不思議な色。推しみたいに言葉じゃう上手く言えない魅力があるよね！</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/blue.png" alt="和菓子名"></figure>
 <h4>ブルーベリー</h4>
-<p>ブルーベリーがまるで宝石のようにキラキラ輝いてる！夢がつまった一品です！</p>
+<p>ブルーベリーがまるで宝石のようにキラキラ輝いてる♡夢がつまった一品です！</p>
 </div>
 
 <div class="list up">
