--- a/food.html
+++ b/food.html
@@ -77,7 +77,7 @@
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/grape.png" alt="和菓子名"></figure>
 <h4>グレープ</h4>
-<p>グレープってとっても不思議な色。推しみたいに言葉じゃう上手く言えない魅力があるよね！</p>
+<p>グレープってとっても不思議な色。推しみたいに言葉じゃ言えない魅力があるよね！</p>
 </div>
 
 <div class="list up">
