--- a/index2.html
+++ b/index2.html
@@ -113,23 +113,31 @@
 </div>
 
 <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample2.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/11.png" alt=""></figure>
 </div>
 
 <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample3.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/7.png" alt=""></figure>
 </div>
 
 <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample4.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/8.png" alt=""></figure>
 </div>
 
 <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample5.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/12.png" alt=""></figure>
 </div>
 
 <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/9.png" alt=""></figure>
+</div>
+ 
+ <div class="list3">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/10.png" alt=""></figure>
+</div>
+ 
+ <div class="list3">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/6.png" alt=""></figure>
 </div>
 
 </div>
