--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 <section>
 <h2>PV<span>プロモーションビデオ</span></h2>
  <center>
-<iframe width="300" height="300"  src="https://www.youtube.com/embed/_1VKuWto0FI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rN5pTvK5N_g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 </center>
 </section>
 
@@ -53,7 +53,7 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 <section>
 <h2>Synopisis movie<span>あらすじムービー</span></h2>
  <center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/rN5pTvK5N_g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+ <iframe width="300" height="300"  src="https://www.youtube.com/embed/_1VKuWto0FI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 </section>
   
  <section> 
