--- a/index2.html
+++ b/index2.html
@@ -93,7 +93,7 @@
   <div class="list2 button">
 <figure class="up">
  <a href="https://a-chaaa.github.io/rinakoteikoku/index.html">
-<img src="https://a-chaaa.github.io/rinakoteikoku/トレカケース.jpg" >
+<img src="https://a-chaaa.github.io/rinakoteikoku/11.png" >
  </a>
 </figure>
 <div class="text">
