--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <div class="list2 button">
 <figure class="up">
  <a href="https://a-chaaa.github.io/rinakoteikoku/index2.html">
-<img src="https://a-chaaa.github.io/rinakoteikoku/1.jpg" >
+<img src="https://a-chaaa.github.io/rinakoteikoku/11.png" >
  </a>
 </figure>
 <div class="text">
