--- a/about.html
+++ b/about.html
@@ -107,6 +107,10 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 <div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/11.png" alt=""></figure>
 </div>
+ 
+ <div class="list3">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/11-12.png" alt=""></figure>
+</div>
 
 <div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/7.png" alt=""></figure>
