--- a/food.html
+++ b/food.html
@@ -217,6 +217,14 @@
 <div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/11.png" alt=""></figure>
 </div>
+ 
+ <div class="list3">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/11-12.png" alt=""></figure>
+</div>
+ 
+ <div class="list3">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/12.png" alt=""></figure>
+</div>
 
 <div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/7.png" alt=""></figure>
@@ -227,7 +235,7 @@
 </div>
 
 <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/12.png" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/6.png" alt=""></figure>
 </div>
 
 <div class="list3">
@@ -238,10 +246,6 @@
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/10.png" alt=""></figure>
 </div>
  
- <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/6.png" alt=""></figure>
-</div>
-
 </div>
 <!--/.pickup-->
 
