--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
 <div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/11.png" alt=""></figure>
 </div>
+ 
+ <div class="list3">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/11-12.png" alt=""></figure>
+</div>
+ 
+ <div class="list3">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/12.png" alt=""></figure>
+</div>
 
 <div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/7.png" alt=""></figure>
@@ -137,7 +145,7 @@
 </div>
 
 <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/12.png" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/6.png" alt=""></figure>
 </div>
 
 <div class="list3">
@@ -148,10 +156,6 @@
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/10.png" alt=""></figure>
 </div>
  
- <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/6.png" alt=""></figure>
-</div>
-
 </div>
 <!--/.pickup-->
 
