--- a/index2.html
+++ b/index2.html
@@ -107,9 +107,17 @@
 <h2>Photo's<span>イベント写真</span></h2>
 
 <div class="pickup">
- 
+
 <div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/11.png" alt=""></figure>
+</div>
+ 
+ <div class="list3">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/11-12.png" alt=""></figure>
+</div>
+ 
+ <div class="list3">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/12.png" alt=""></figure>
 </div>
 
 <div class="list3">
@@ -121,7 +129,7 @@
 </div>
 
 <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/12.png" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/6.png" alt=""></figure>
 </div>
 
 <div class="list3">
@@ -132,10 +140,6 @@
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/10.png" alt=""></figure>
 </div>
  
- <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/6.png" alt=""></figure>
-</div>
-
 </div>
 <!--/.pickup-->
 
