--- a/name.html
+++ b/name.html
@@ -133,6 +133,14 @@
 <div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/11.png" alt=""></figure>
 </div>
+ 
+ <div class="list3">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/11-12.png" alt=""></figure>
+</div>
+ 
+ <div class="list3">
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/12.png" alt=""></figure>
+</div>
 
 <div class="list3">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/7.png" alt=""></figure>
@@ -143,7 +151,7 @@
 </div>
 
 <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/12.png" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/6.png" alt=""></figure>
 </div>
 
 <div class="list3">
@@ -154,10 +162,6 @@
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/10.png" alt=""></figure>
 </div>
  
- <div class="list3">
-<figure><img src="https://a-chaaa.github.io/rinakoteikoku/6.png" alt=""></figure>
-</div>
-
 </div>
 <!--/.pickup-->
 
