--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  
 <div style="text-align: center">  
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/小見出しを追加 (1).png" alt="トレカケース全8種類">
+<img src="https://a-chaaa.github.io/rinakoteikoku/torekaaa.png" alt="トレカケース全8種類">
 </figure>
 </div>
  
