--- a/about.html
+++ b/about.html
@@ -80,7 +80,11 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
   
 <h2>Event map<span>イベントマップ</span></h2>
   
-画像入れる
+<div style="text-align: center">  
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/マップ.png" alt="イベントマップ">
+</figure>
+</div>
 
   
 <h2>Daily schedule<span>一日のスケジュール</span></h2>
