--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
  
  <div class="list2">
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/名前入りチケット.jpg" alt="名前入り切符">
+<img src="https://github.com/a-chaaa/rinakoteikoku/blob/main/%E5%90%8D%E5%89%8D%E5%85%A5%E3%82%8A%E3%83%81%E3%82%B1%E3%83%83%E3%83%88.png?raw=true" alt="名前入り切符">
 <figcaption>名前入りきっぷ</figcaption>
 </figure>
 <div class="text">
