--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
  
  <div style="text-align: center">  
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/トレカケース.png" alt="トレカケース説明">
+<img src="https://a-chaaa.github.io/rinakoteikoku/とおれえかあ.png" alt="トレカケース説明">
 </figure>
 </div>
  
@@ -55,7 +55,7 @@
 </figure>
 <div class="text">
 <h3>トレカケース</h3>
-<h4>1600円（税込1760円）</h4>
+<h4>1200円（税込1320円）</h4>
 女の子の夢がいっぱい詰まったグッズ♡<br>
 いつでもどこでも推しと一緒にいよう！
 </div>
